--- a/src/app/card-transfer/export-transfer/export-transfer.component.html
+++ b/src/app/card-transfer/export-transfer/export-transfer.component.html
@@ -2,14 +2,14 @@
 <mat-divider></mat-divider>
 <mat-card class="mat-elevation-z2">
   <mat-card-content id="contentToConvert">
-    <h1 class="m-l-10" align="center">BIÊN BẢN GIAO NHẬN THẺ</h1>
+    <h1 class="m-l-10" align="center">{{ "CardTransfer.title" | translate }}</h1>
   <hr>
     <div>
       <table class="headTable">
         <tr>
-          <th>NHÂN VIÊN GIAO</th>
-          <th>NHÂN VIÊN NHẬN</th>
-          <th>SHIPPER</th>
+          <th>{{ "CardTransfer.labelDeliverStaffExport" | translate }}</th>
+          <th>{{ "CardTransfer.labelReiceveStaffExport" | translate }}</th>
+          <th>{{ "CardTransfer.labelShipperExport" | translate }}</th>
         </tr>
         <tr>
           <td>{{ shipper }}</td>
@@ -24,7 +24,7 @@
 
         </tr>
         <ng-container matColumnDef="transferDate">
-          <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>NGÀY GIAO</th>
+          <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>{{ "CardTransfer.tableExportTransfer.Today" | translate }}</th>
           <td mat-cell fxHide fxShow.gt-md style="word-wrap: break-word; width: 150px; text-align: center" *matCellDef="let value">
             <label>
               {{ today | date: "dd-MM-yyyy" }}
@@ -33,7 +33,7 @@
         </ng-container>
 
         <ng-container matColumnDef="customerName">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>TÊN KHÁCH HÀNG</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "CardTransfer.tableExportTransfer.CustName" | translate }}</th>
           <td mat-cell *matCellDef="let value" style="max-width: 150px; word-break: break-word; text-align: center">
             <label>
               {{ value.customerName }}
@@ -43,7 +43,7 @@
         </ng-container>
 
         <ng-container matColumnDef="cardNumber">
-          <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>SỐ THẺ</th>
+          <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>{{ "CardTransfer.tableExportTransfer.CardNo" | translate }}</th>
           <td mat-cell fxHide fxShow.gt-md *matCellDef="let value" style="max-width: 150px; word-break: break-word; text-align: center">
             <label class="card-info">
               {{ value.cardNumber.replace("XXX-XXX", "X") }}
@@ -52,7 +52,7 @@
         </ng-container>
 
         <ng-container matColumnDef="senderStaff">
-          <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>BÊN GIAO</th>
+          <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>{{ "CardTransfer.tableExportTransfer.Deliver" | translate }}</th>
           <td mat-cell fxHide fxShow.gt-md *matCellDef="let value" style="max-width: 50px; word-break: break-word; text-align: center">
             <label class="card-info">
               ..................
@@ -61,7 +61,7 @@
         </ng-container>
 
         <ng-container matColumnDef="shipper">
-          <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>SHIPPER</th>
+          <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>{{ "CardTransfer.tableExportTransfer.Shipper" | translate }}</th>
           <td mat-cell fxHide fxShow.gt-md *matCellDef="let value" style="max-width: 50px; word-break: break-word; text-align: center">
             <label class="card-info">
               ..................
@@ -70,7 +70,7 @@
         </ng-container>
 
         <ng-container matColumnDef="receiverStaff">
-          <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>BÊN NHẬN</th>
+          <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>{{ "CardTransfer.tableExportTransfer.Receiver" | translate }}</th>
           <td mat-cell fxHide fxShow.gt-md *matCellDef="let value" style="max-width: 50px; word-break: break-word; text-align: center">
             <label class="card-info">
               ..................
@@ -79,7 +79,7 @@
         </ng-container>
 
         <ng-container matColumnDef="note">
-          <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>GHI CHÚ</th>
+          <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>{{ "CardTransfer.tableExportTransfer.Note" | translate }}</th>
           <td mat-cell fxHide fxShow.gt-md *matCellDef="let value" style="max-width: 50px; word-break: break-word; text-align: center">
             <label class="card-info">
               ..................
@@ -113,11 +113,11 @@
   </div>
   <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" style="display: flex; justify-content: center; margin: 15px">
     <button mat-button type="button" [routerLink]="['../create']" style="background: rgba(0, 0, 0, 0.4);; color: white; max-height: 50px; margin: 8px"
-    > Hủy
+    > {{ "CardTransfer.btnCancel" | translate }}
     </button>
     <button mat-button type="button" style="background: #C3291C; color: white; max-height: 50px; margin: 8px"
     (click)="openPdf()"
-    > In
+    > {{ "CardTransfer.btnPrint" | translate }}
     </button>
   </div>
 </mat-card>
